# torch-p2nix

./: .gitignore  flake.nix  pyproject.toml
