[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Manolo <manolo@manolo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.0"
numpy = "^1.23.5"
nvidia-cudnn-cu11 = "8.5.0.96"
nvidia-cuda-nvrtc-cu11 = "11.7.99"
nvidia-cuda-runtime-cu11 = "11.7.99"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
