[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Phillip Cloud <417981+cpcloud@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.13"
numpy = "^1.23.5"
nvidia-cudnn-cu11 = "~8.5.0"
nvidia-cuda-nvrtc-cu11 = "~11.7"
nvidia-cuda-runtime-cu11 = "~11.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
